K8s/10-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: sugang-system
spec:
  ports:
  - port: 3306
  selector:
    app: db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: sugang-system
spec:
  serviceName: "db-service"
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mysql
        image: binseoyun/db:v1
        imagePullPolicy: Always # ✅ K8s가 Docker Hub에서 이미지를 가져오도록 Always로 변경
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: db-persistent-storage
          mountPath: /var/lib/mysql
  # PVC 자동 생성 (데이터 영구 보존)
  volumeClaimTemplates:
  - metadata:
      name: db-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
