K8s/40-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: sugang-system
spec:
  type: LoadBalancer # localhost:3000 접속용
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 32565
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: sugang-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: binseoyun/frontend:v2
        imagePullPolicy: Always # ✅ K8s가 Docker Hub에서 이미지를 가져오도록 Always로 변경
        ports:
        - containerPort: 3000
